--- a/css/style.css
+++ b/css/style.css
@@ -300,10 +300,10 @@ img {
   text-transform: uppercase;
   color: #4d5ae5;
   display: inline-block;
-  margin-bottom: 16px;
+  text-decoration: none;
 }
 .studio-footer {
-  color: #2e2f42;
+  color: #f4f4fd;
 }
 .footer-text {
   line-height: 1.5;
@@ -329,6 +329,7 @@ img {
   margin-right: 120px;
   display: flex;
   align-items: baseline;
+  flex-direction: column;
 }
 .header-left {
   display: flex;
@@ -409,7 +410,7 @@ img {
 }
 .footer-list {
   display: flex;
-  gap: 16px;
+  padding: 0;
 }
 .footer-list-item {
   width: 40px;
@@ -447,4 +448,49 @@ img {
 .footer .container {
   display: flex;
   align-items: baseline;
+}
+footer .form {
+  display: flex;
+  gap: 24px;
+}
+footer .footer-list {
+  margin-right: 80px;
+  gap: 16px;
+}
+footer .email-input {
+  background-color: transparent;
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+}
+footer .subscribe-button {
+  min-width: 165px;
+  height: 40px;
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  border: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  border-radius: 4px;
+}
+footer button .icons-svg {
+  margin-left: 16px;
+}
+.footer-email p {
+  color: #ffffff;
 }
